# pytest-local

./: README.md  ltest.py  pyproject.toml
